# qtc

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  install.sh  qtc.pro  qtc.py
examples/Hello_world/: qtctest.pro  test.c
header/: private_optargs.h  private_signal.h  qabstractbutton.h  qabstractscrollarea.h  qabstractslider.h  qabstractspinbox.h  qapplication.h  qdial.h  qevent.h  qglobal.h  qlabel.h  qlayout.h  qmainwindow.h  qmdiarea.h  qmdisubwindow.h  qmenu.h  qmenubar.h  qobject.h  qpointer.h  qprogressbar.h  qpushbutton.h  qsize.h  qsizegrip.h  qstackedwidget.h  qstring.h  qt.h  qtglobal.h  qtoolbar.h  qtoolbutton.h  qwidget.h
header/qtc/: private_returnpointer.h  qabstractbutton.h  qabstractscrollarea.h  qabstractslider.h  qabstractspinbox.h  qaction.h  qapplication.h  qdial.h  qicon.h  qlabel.h  qlayout.h  qmdiarea.h  qmdisubwindow.h  qmenubar.h  qpoint.h  qpushbutton.h  qsize.h  qsizegrip.h  qstring.h  qtabwidget.h  qtoolbar.h  qtoolbutton.h
src/: qabstractbutton.cpp  qabstractscrollarea.cpp  qabstractslider.cpp  qabstractspinbox.cpp  qabstractspinbutton.cpp  qapplication.cpp  qdial.cpp  qglobal.cpp  qlabel.cpp  qlayout.cpp  qmainwindow.cpp  qmdiarea.cpp  qmdisubwindow.cpp  qmenubar.cpp  qobject.cpp  qprogressbar.cpp  qpushbutton.cpp  qsize.cpp  qsizegrip.cpp  qstackedwidget.cpp  qstring.cpp  qt.cpp  qtoolbar.cpp  qtoolbutton.cpp  qwidget.cpp
